--- a/index.html
+++ b/index.html
@@ -1,14 +1,51 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.jpeg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>404 Rooms</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="utf-8" />
+
+  <!-- Primary SEO -->
+  <title>404 Rooms – Affordable & Stylish Room Rentals in [Baku]</title>
+  <meta name="description"
+        content="Discover budget‑friendly, stylish rooms for rent in [Baku]. Book instantly, read verified reviews and find your perfect stay with 404 Rooms.">
+  <link rel="canonical" href="https://www.404rooms.com/" />
+  <meta name="robots" content="index,follow" />
+
+  <!-- Mobile / UX -->
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+  <!-- Open Graph (Facebook / LinkedIn) -->
+  <meta property="og:type"        content="website">
+  <meta property="og:url"         content="https://www.404rooms.com/">
+  <meta property="og:title"       content="404 Rooms – Affordable & Stylish Room Rentals">
+  <meta property="og:description" content="Discover budget‑friendly, stylish rooms for rent in [Baku].">
+  <meta property="og:image"       content="https://www.404rooms.com/og-cover.jpg">
+
+  <!-- Twitter -->
+  <meta name="twitter:card"        content="summary_large_image">
+  <meta name="twitter:title"       content="404 Rooms – Stylish Room Rentals">
+  <meta name="twitter:description" content="Budget‑friendly rooms with instant booking and verified reviews.">
+  <meta name="twitter:image"       content="https://www.404rooms.com/og-cover.jpg">
+
+  <!-- Favicon -->
+  <link rel="icon" href="./src/assets/logo.png" type="image/jpeg" />
+
+  <!-- Structured data (rich snippets) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "404 Rooms",
+    "url": "https://www.404rooms.com/",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.404rooms.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+</head>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
